# agent-browser

./: .gitignore  BUILD.md  Dockerfile  Dockerfile.playwright  Makefile  README.md  README_CN.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/agent_browser/: __init__.py  __main__.py  config.py  crypto.py
src/agent_browser/browser/: __init__.py  captcha.py  chromium.py  engine.py  humanize.py  session.py  stealth.py
src/agent_browser/cli/: main.py
src/agent_browser/core/: __init__.py  agent.py  grabber.py  llm.py  memory.py  scheduler.py
src/agent_browser/web/: __init__.py  app.py
src/agent_browser/web/static/css/: style.css
src/agent_browser/web/static/js/: app.js
src/agent_browser/web/templates/: index.html
tests/: __init__.py  test_agent.py  test_captcha.py  test_chromium.py  test_cli.py  test_config.py  test_crypto.py  test_grabber.py  test_humanize.py  test_integration.py  test_llm.py  test_memory.py  test_scheduler.py  test_session.py  test_stealth.py  test_web.py
