[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-browser"
version = "1.0.0"
description = "AI-powered browser automation agent combining GenericAgent + browser-harness + CloakBrowser"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10,<3.14"
authors = [
    {name = "AgentBrowser Team"}
]
keywords = ["ai", "agent", "browser", "automation", "captcha", "stealth"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP :: Browsers",
    "Topic :: Software Development :: Testing",
]

dependencies = [
    # Core
    "click>=8.1",
    "rich>=13.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    # LLM
    "openai>=1.30",
    "anthropic>=0.25",
    "httpx>=0.24",
    # Browser (internalized from browser-harness)
    "websockets>=12.0",
    "Pillow>=10.0",
    # Stealth (internalized from CloakBrowser)
    "playwright>=1.40",
    # Web GUI
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "jinja2>=3.1",
    # Task scheduling
    "apscheduler>=3.10",
    # HTML parsing (from GenericAgent)
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "pytest-mock>=3.12",
    "ruff>=0.4",
    "mypy>=1.10",
]
geoip = [
    "geoip2>=4.0",
    "socksio>=1.0",
]

[project.scripts]
agent-browser = "agent_browser.cli.main:cli"
ab = "agent_browser.cli.main:cli"

[project.urls]
Homepage = "https://github.com/user/agent-browser"
Repository = "https://github.com/user/agent-browser"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "strict"
addopts = "-p no:anyio"
markers = [
    "slow: marks tests as slow",
    "browser: marks tests that need a browser",
    "integration: marks integration tests",
]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
